Fixed a little bug with the CSS Transition overlapping with the JavaScript

--- a/Placeholder/sass/style.scss
+++ b/Placeholder/sass/style.scss
@@ -7,7 +7,7 @@ html{
   width: 100%;
   height: 100%;
   background: rgb(34, 176, 77);
-  @include transition(background .25s);
+  @include transition(background .08s);
   color: #ccc;
 }
 body{
